--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -12,13 +12,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1.Download url\n",
-    "2.Download folder (compressed file)\n",
-    "3.Extract folder (extracted file))\n",
-    "4.Train dataset folder\n",
-    "5.Test dataset folder"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -155,29 +149,46 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.dockerignore',\n",
+       " '.git',\n",
+       " '.github',\n",
+       " '.gitignore',\n",
+       " 'app.py',\n",
+       " 'config',\n",
+       " 'demo.py',\n",
+       " 'Dockerfile',\n",
+       " 'housing',\n",
+       " 'housing_logs',\n",
+       " 'housing_predictor.egg-info',\n",
+       " 'LICENSE',\n",
+       " 'notebook',\n",
+       " 'README.md',\n",
+       " 'requirements.txt',\n",
+       " 'schema.yaml',\n",
+       " 'setup.py',\n",
+       " 'venv']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "config_file_path=os.path.join(\"config\",\"config.yaml\")"
+    "os.listdir(\".\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'config\\\\config.yaml'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config_file_path"
+    "config_file_path=os.path.join(\"config\",\"config.yaml\")"
    ]
   },
   {
@@ -188,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "'config\\\\config.yaml'"
       ]
      },
      "execution_count": 13,
@@ -197,7 +208,7 @@
     }
    ],
    "source": [
-    "os.path.exists(config_file_path)"
+    "config_file_path"
    ]
   },
   {
@@ -208,10 +219,30 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project'"
+       "True"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.exists(config_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project'"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +278,7 @@
        " 'ingested_test_dir': 'test'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,31 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from housing.constant import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'training_pipeline_config'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TRAINING_PIPELINE_CONFIG_KEY"
    ]
   },
   {
@@ -320,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "{'pipeline_name': 'housing', 'artifact_dir': 'artifact'}"
+       "'training_pipeline_config'"
       ]
      },
      "execution_count": 21,
@@ -329,7 +340,7 @@
     }
    ],
    "source": [
-    "config[TRAINING_PIPELINE_CONFIG_KEY]"
+    "TRAINING_PIPELINE_CONFIG_KEY"
    ]
   },
   {
@@ -340,10 +351,30 @@
     {
      "data": {
       "text/plain": [
-       "'housing'"
+       "{'pipeline_name': 'housing', 'artifact_dir': 'artifact'}"
       ]
      },
      "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config[TRAINING_PIPELINE_CONFIG_KEY]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'housing'"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +407,7 @@
        "'c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +427,7 @@
        "'housing'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +447,7 @@
        "'artifact'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +467,7 @@
        "'c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,31 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = Configuartion()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TrainingPipelineConfig(artifact_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact')"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config.get_training_pipeline_config()"
    ]
   },
   {
@@ -491,10 +502,30 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project'"
+       "TrainingPipelineConfig(artifact_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact')"
       ]
      },
      "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.get_training_pipeline_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project'"
+      ]
+     },
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +572,7 @@
        "'data_ingestion'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,16 +583,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-06-25-13-54-59'"
+       "'2022-07-02-11-00-57'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,16 +666,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from housing.config.configuration import Configuartion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = Configuartion(config_file_path=\"c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\config\\\\config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataIngestionConfig(dataset_download_url='https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz', tgz_download_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-06-25-13-54-59\\\\tgz_data', raw_data_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-06-25-13-54-59\\\\raw_data', ingested_train_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-06-25-13-54-59\\\\ingested_data\\\\train', ingested_test_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-06-25-13-54-59\\\\ingested_data\\\\test')"
+       "DataIngestionConfig(dataset_download_url='https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz', tgz_download_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-02-11-00-57\\\\tgz_data', raw_data_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-02-11-00-57\\\\raw_data', ingested_train_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-02-11-00-57\\\\ingested_data\\\\train', ingested_test_dir='c:\\\\Users\\\\Admin\\\\ML_Project1\\\\Machine_learning_-project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-02-11-00-57\\\\ingested_data\\\\test')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
